2003-08-04  Lutz Mueller <lutz@users.sourceforge.net>

	* po/*.po: Updated.
	* Makefile.am: Add m4 and intl to SUBDIRS. automake complains
	  otherwise.
	* configure.in: Add m4/Makefile. make distcheck complains otherwise.
	  Version 0.5.12

2003-07-30  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: Version 0.5.11

2003-07-30  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Patch by Torgeir Hansen <torgeir@trenger.ro>
	  to prevent endless loops.

2003-07-30  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Don't crash if entries are totally insane.

2003-07-20  Lutz Mueller <lutz@users.sourceforge.net>

	* configure.in: Version 0.5.10

2003-05-01  Lutz Mueller <lutz@users.sourceforge.net>

	Suggestion by Gernot Jander <gernot@bigpond.com>:

	* libexif/exif-entry.c: Ignore "   " in EXIF_TAG_COPYRIGHT.

2003-04-29  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.c: Set ref_count to 1 on exif_loader_new.

2003-04-29  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Another attempt to fix EXIF_TAG_COPYRIGHT.

2003-04-28  Lutz Mueller <lutz@users.sourceforge.net>

	Bug discovered by Jay Love <jslove@users.sourceforge.net>

	* libexif/exif-entry.c: Don't crash if EXIF_TAG_COPYRIGHT is NULL.

2003-04-28  Lutz Mueller <lutz@users.sourceforge.net>

	Patch by Gernot Jander <gernot@bigpond.com>:

	* libexif/exif-tag.c: Add call to bind_textdomain_codeset
	* po/*.UTF-8: New.

2003-03-13  Lutz Mueller <lutz@users.sourceforge.net>

	* libjpeg/jpeg-data.c: Aravind <aravinds1@users.sourceforge.net>
	  found a bug there.

2003-03-18  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_new_from_file): Use the new
	  ExifLoader. It seems to work.

2003-03-17  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-loader.[c,h]: New. Mostly written by Jens Finke
	  <jens@triq.net>. Not tested at all.

2003-02-11  Lutz Mueller <lutz@users.sourceforge.net>
