@@ -96,7 +96,7 @@ typedef enum {
 	EXIF_TAG_SUBJECT_AREA			= 0x9214,
 	EXIF_TAG_MAKER_NOTE			= 0x927c,
 	EXIF_TAG_USER_COMMENT			= 0x9286,
-	EXIF_TAG_SUBSEC_TIME			= 0x9290,
+	EXIF_TAG_SUB_SEC_TIME			= 0x9290,
 	EXIF_TAG_SUB_SEC_TIME_ORIGINAL		= 0x9291,
 	EXIF_TAG_SUB_SEC_TIME_DIGITIZED		= 0x9292,
 	EXIF_TAG_FLASH_PIX_VERSION		= 0xa000,
